fix: add gap between messages

--- a/src/components/Applications/ChatApplication/ChatApplication.module.css
+++ b/src/components/Applications/ChatApplication/ChatApplication.module.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  gap: 18px;
 }
 
 .input {
